fix little typos

--- a/src/html/pages/home.njk
+++ b/src/html/pages/home.njk
@@ -61,11 +61,11 @@
 
     <p>Add a <code>browserslist</code> key to your <code>package.json</code> file.</p>
 
-    <div class="notif">This is a temporary workaround i found to <a href="https://github.com/parcel-bundler/parcel/issues/2128">this error</a>.</div>
+    <div class="notif">This is a temporary workaround I found to <a href="https://github.com/parcel-bundler/parcel/issues/2128">this error</a>.</div>
 
     <pre><code class="lang-javascript">{{ browserlist | escape }}</code></pre>
 
-    <p>Import the library in you javascript bundle.</p>
+    <p>Import the library in your javascript code.</p>
 
     <pre><code class="lang-javascript">import 'z-web-components'</code></pre>
 
@@ -85,7 +85,7 @@
     <hr>
     <h3 id="customisation">Customisation</h3>
 
-    <p>You can customize some colors via css variables.</p>
+    <p>You can customize the default colors via CSS variables.</p>
 
     <pre data-about="css colors"><code class="lang-css">{{ cssColors | escape }}</code></pre>
 </div>
