--- a/src/html/pages/input.njk
+++ b/src/html/pages/input.njk
@@ -62,7 +62,7 @@
     <h4 id="attributes-type">Type</h4>
 
     <p>All the native <code>{{ '<input>' | escape }}</code> types are supported by the <code>{{ '<z-input>' | escape }}</code> component.</p>
-    <p>Here is a list of those that have already been tested :</p>
+    <p>Here is a list of those that can be used:</p>
 
     <ul>
         <li>color</li>
