--- a/src/html/partials/navigation.njk
+++ b/src/html/partials/navigation.njk
@@ -1,7 +1,7 @@
 {% set menu = [
     { path: '/index.njk', title: 'Quick start', id: 'home' },
     { path: '/input.njk', title: 'Input', id: 'input' },
-    { path: '/textarea.njk', title: 'textarea', id: 'textarea' },
+    { path: '/textarea.njk', title: 'Textarea', id: 'textarea' },
     { path: '/checkbox.njk', title: 'Checkbox', id: 'checkbox' },
     { path: '/toggle.njk', title: 'Toggle', id: 'toggle' },
     { path: '/radio.njk', title: 'Radio', id: 'radio' },
