--- a/src/html/pages/tab.njk
+++ b/src/html/pages/tab.njk
@@ -88,7 +88,13 @@
     <p>The <code>{{ '<z-tab-group>' | escape }}</code> component is a wrapper for a list of <code>{{ '<z-tab>' | escape }}</code> components.</p>
     <p>It displays a list of buttons meant to activate its corresponding <code>{{ '<z-tab>' | escape }}</code> component and the content of that <code>{{ '<z-tab>' | escape }}</code> component.</p>
     <p>Only the currently active tab button can be focused.</p>
-    <p>To activate the other <code>{{ '<z-tab>' | escape }}</code> components, you have to have focus on one of the buttons and use up/left key for previous and right/down key for next.</p>
+    <p>To activate the other <code>{{ '<z-tab>' | escape }}</code> components, you have to have focus on one of the tabs buttons and:</p>
+    <ul>
+        <li>Use <code class="keyboard">Up</code> or <code class="keyboard">Left</code> key for <b>previous</b> tab.</li>
+        <li>Use <code class="keyboard">Right</code> or <code class="keyboard">Down</code> key for <b>next</b> tab.</li>
+        <li>Use <code class="keyboard">PageUp</code> key for first tab.</li>
+        <li>Use <code class="keyboard">PageDown</code> key for last tab.</li>
+    </ul>
     
     <h4 id="accessibility-tab">Tab group</h4>
 
