Add select element

--- a/src/css/_variables.scss
+++ b/src/css/_variables.scss
@@ -32,6 +32,7 @@ $box-shadow: 0 0 .5rem rgba(black, .3);
     --z-secondary-alt-color: #{darken($gray, 10%)};
     --z-danger-color: #{$red};
     --z-tick-color: #{$white};
+    --z-background-color: #{lighten($silver, 5%)};
     
     @media (prefers-color-scheme: dark) {
         --white: #{$black};
@@ -39,7 +40,9 @@ $box-shadow: 0 0 .5rem rgba(black, .3);
         --gray: #{$silver};
         --black: #{$white};
         
-        --z-secondary-alt-color: #{lighten($gray, 10%)};
+        --z-secondary-color: #{$silver};
+        --z-secondary-alt-color: #{darken($silver, 10%)};
         --z-tick-color: #{$black};
+        --z-background-color: #{darken($gray, 5%)};
     }
 }
