--- a/src/html/partials/navigation.njk
+++ b/src/html/partials/navigation.njk
@@ -5,6 +5,7 @@
     { path: '/checkbox.njk', title: 'Checkbox', id: 'checkbox' },
     { path: '/toggle.njk', title: 'Toggle', id: 'toggle' },
     { path: '/radio.njk', title: 'Radio', id: 'radio' },
+    { path: '/select.njk', title: 'Select', id: 'select' },
     { path: '/tab.njk', title: 'Tab', id: 'tab' }
 ] %}
 
