Make the select element use z-option-group

--- a/src/css/_variables.scss
+++ b/src/css/_variables.scss
@@ -32,7 +32,8 @@ $box-shadow: 0 0 .5rem rgba(black, .3);
     --z-secondary-alt-color: #{darken($gray, 10%)};
     --z-danger-color: #{$red};
     --z-tick-color: #{$white};
-    --z-background-color: #{lighten($silver, 5%)};
+    --z-background-color: #{$white};
+    --z-background-alt-color: #{darken($white, 5%)};
     
     @media (prefers-color-scheme: dark) {
         --white: #{$black};
@@ -43,6 +44,7 @@ $box-shadow: 0 0 .5rem rgba(black, .3);
         --z-secondary-color: #{$silver};
         --z-secondary-alt-color: #{darken($silver, 10%)};
         --z-tick-color: #{$black};
-        --z-background-color: #{darken($gray, 5%)};
+        --z-background-color: #{$black};
+        --z-background-alt-color: #{darken($black, 5%)};
     }
 }
