--- a/src/html/pages/home.njk
+++ b/src/html/pages/home.njk
@@ -39,9 +39,11 @@
 ':root {
     --z-primary-color: #3A7;
     --z-secondary-color: #929595;
-    --z-secondary-alt-color: #787C7C;
+    --z-secondary-alt-color: #787c7c;
     --z-danger-color: #D22;
-    --z-tick-color: #F2F5F5;
+    --z-tick-color: #f2f5f5;
+    --z-background-color: #f2f5f5;
+    --z-background-alt-color: #e4eaea;
 }'%}
 
 <div class="container">
