--- a/src/html/pages/select.njk
+++ b/src/html/pages/select.njk
@@ -1,50 +1,22 @@
 {% from "../macros/example.njk" import example %}
 
 {% set basicExample %}
-<z-select>
+<z-select id="change-event-input" multiple>
     <z-option value="opt1" selected>Option 1</z-option>
     <z-option value="opt2">Option 2</z-option>
     <z-option value="opt3">Option 3</z-option>
-    <z-option value="opt4">Option 4</z-option>
-    <z-option value="opt5">Option 5</z-option>
-    <z-option value="opt6">Option 6</z-option>
-    <z-option value="opt7">Option 7</z-option>
-    <z-option value="opt8">Option 8</z-option>
 </z-select>
 
-<z-select multiple>
-    <z-option value="opt1" selected>Option 1</z-option>
-    <z-option value="opt2">Option 2</z-option>
-    <z-option value="opt3" selected>Option 3</z-option>
-    <z-option value="opt4">Option 4</z-option>
-    <z-option value="opt5">Option 5</z-option>
-    <z-option value="opt6">Option 6</z-option>
-    <z-option value="opt7">Option 7</z-option>
-    <z-option value="opt8">Option 8</z-option>
-</z-select>
+<p>Result: <b id="change-event-result"></b></p>
 
-<z-option-group>
-    <z-option value="opt1" selected>Option 1</z-option>
-    <z-option value="opt2">Option 2</z-option>
-    <z-option value="opt3">Option 3</z-option>
-    <z-option value="opt4">Option 4</z-option>
-    <z-option value="opt5">Option 5</z-option>
-    <z-option value="opt6">Option 6</z-option>
-    <z-option value="opt7">Option 7</z-option>
-    <z-option value="opt8">Option 8</z-option>
-</z-option-group>
+<script>
+    const $input = document.querySelector('#change-event-input')
+    const $result = document.querySelector('#change-event-result')
 
-<z-option-group multiple>
-    <z-option value="opt1" selected>Option 1</z-option>
-    <z-option value="opt2">Option 2</z-option>
-    <z-option value="opt3" selected>Option 3</z-option>
-    <z-option value="opt4">Option 4</z-option>
-    <z-option value="opt5">Option 5</z-option>
-    <z-option value="opt6">Option 6</z-option>
-    <z-option value="opt7">Option 7</z-option>
-    <z-option value="opt8">Option 8</z-option>
-</z-option-group>
-
+    $input.addEventListener('z-change', ({ detail }) => {
+        $result.innerText = detail.value
+    })
+</script>
 {% endset %}
 
 <div class="container">
